# zero2prod

./: Cargo.toml  Dockerfile  README.md  spec.yaml  sqlx-data.json
.cargo/: config.toml
.github/workflows/: general.yml
configuration/: base.yaml  production.yaml
migrations/: 20240825115516_make_status_not_null_in_subscriptions.sql  20240825115920_create_subsccription_tokens_table.sql  20240907110037_create_users_table.sql  20240907115411_rename_password_column.sql  20240907142858_remove_salt_from_users.sql  20240923214209_seed_user.sql  20240930215849_create_idempotency_table.sql
scripts/: init_db.sh  init_redis.sh
src/: authentication.rs  configuration.rs  domain.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  middleware.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  mod.rs
src/domain/: mod.rs  password.rs  subscriber_email.rs  subscriber_name.rs  subscription_token.rs
src/idempotency/: key.rs  persistence.rs
src/routes/: helpers.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  logout.rs  mod.rs
src/routes/admin/newsletter/: get.rs  post.rs
src/routes/admin/newsletters/: get.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  newsletter.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
