[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
anyhow = "1"
thiserror = "1"
rand = { version = "0.8", features = ["std_rng"] }
unicode-segmentation = "1"
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde-aux = "4"
serde = { version = "1", features = ["derive"] }
config = "0.14"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
log = "0.4"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
secrecy = { version = "0.8", features = ["serde"] }
tracing-actix-web = "0.7"
validator = "0.16"

[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline",
]

[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["json", "rustls-tls"]

[dev-dependencies]
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
fake = "~2.3"
claims = "0.7"
once_cell = "1"
wiremock = "0.5"
serde_json = "1"
linkify = "0.9"
